<resources>
    <string name="app_name">Easy Game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_inicial">Dashboard</string>
    <string name="title_activity_cad_usuario">Cadastro de Usuário</string>
    <string name="nome">Nome</string>
    <string name="posicao_usuario">Convidar para Posição:</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="apelido">Apelido</string>
    <string name="telefone">Telefone</string>
    <string name="tipo_tecnico">Técnico</string>
    <string name="tipo_jogador">Jogador</string>
    <string name="tipo_usuario">Tipo Usuário</string>
    <string name="dataFundacao">Data Fundação</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_admTimeUI">Gerenciamento</string>
    <string name="title_activity_notificacoes">Convites Pendentes</string>
</resources>
